service/user/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
spec:
  ports:
    - port: 8080
      name: rest
  selector:
    app: user
