service/user/k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
spec:
  gateways:
  - ichsan-setiawan-gateway-api
  hosts:
  - "*.xip.io"
  http:
  - match:
    - uri:
        prefix: /user
    - uri:
        prefix: /register
    route:
    - destination:
        host: user
        port:
          number: 8080
